--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.27.3",
+    "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.454.0",
     "next": "^15.0.3",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "lucide-react": "^0.454.0",
-    "framer-motion": "^11.11.17",
-    "tailwindcss": "^3.4.14",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49"
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@types/node": "^22.8.6",
